--- a/index.css
+++ b/index.css
@@ -355,13 +355,43 @@
 }
 
 
+.card-image{
+  position: relative;
+}
+
+.overlay{
+  position: absolute;
+  top: 0;
+  opacity: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.overlay a i{
+  color: rgb(2, 2, 2);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+  z-index: 999;
+  background-color: aliceblue;
+  padding: 13px 15px;
+  border-radius: 50%;
+}
+
+.card-image:hover .overlay {
+  opacity: 1;
+}
 
 .catergory-card:hover .card-image img{
   scale: 1.8 !important;
   cursor: pointer;
-  transition: 0.5s;
+  transition: 0.5s ease-in-out;
   z-index: 250!important;
   overflow: hidden;
+  tra
 }
 
 .catergory-card:hover .now-price p{
